--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
       <a href="https://www.colouredcow.com/">Internship</a> 
       <div><li><h4>I gained exposure to working with teams in an organizational environment and polished   his skills in Laravel. I am ready to be launched into the pool of talented graduates.</h4>
       </li></div>
-      <div><li><a href="https://media-exp3.licdn.com/dms/document/C4D2DAQFrOdEJeQSqng/profile-treasury-document-pdf-analyzed/0/1623474073770?e=1625313600&v=beta&t=-XmUg5wBxRji5lCXE5n6qiUIv43Ld6adCRemyK51tSw">Completion Certificate of Internship</a></li></div>
+      <div><li><a href="img/document.pdf">Completion Certificate of Internship</a></li></div>
      <h5>Employed duration 2 months (Jan 2021 – Feb 2021), Location :Tehri Garhwal, Uttarakhand, India.</h5>
      <br></br>
      </ul>
