--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
           <h5>Employment Duration 5 mos(Jan 2019 – May 2019)
           Location Haridwar Area, India</h5>
         <li><a
-            href="https://media-exp1.licdn.com/dms/document/C4D2DAQFNNRd2JPvdBQ/profile-treasury-document-pdf-analyzed/0/1623492147400?e=1625313600&v=beta&t=fkxbXBMEqOZPUOh4-1vWSnVryqxkjJ0ocZWNHihY7rU">Completion
+            href="img/document1.pdf">Completion
             Certificate of Internship</a></li>
       </ul>
     </div>
