--- a/work.html
+++ b/work.html
@@ -96,6 +96,21 @@
         <p>I build it using <b>MERN stack</b>.</p>
       </div>
     </div>
+    <br></br>
+    <div class="row mt-2 ">
+      <div class="col-lg-6">
+        <a href="https://github.com/Pawanupadhyay10/Crome-Extension"><img class="img-responsive" src="img/poo2.png"
+            alt="" /></a>
+      </div>
+      <div class="col-lg-6 ">
+        <h1>funny Poo💩💩🤣</h1>
+        <p style="text-align: left"><a href="https://github.com/Pawanupadhyay10/Crome-Extension">Crome Extension.</a>
+          <br><br>
+          I build it using Javascript,
+          We can change anybody's name in any profile with poo💩💩 and have fun with friends.
+        </p>
+      </div>
+    </div>
     <!-- /row -->
   </div>
   <!-- /container -->
