--- a/work.html
+++ b/work.html
@@ -111,6 +111,21 @@
         </p>
       </div>
     </div>
+    <br></br>
+    <div class="row mt-2 ">
+      <div class="col-lg-6">
+        <a href="https://github.com/Pawanupadhyay10/Blog-App"><img class="img-responsive" src="img/blo.png"
+            alt="" /></a>
+      </div>
+      <div class="col-lg-6 ">
+        <h1>The Blog App</h1>
+        <p style="text-align: left"><a href="https://github.com/Pawanupadhyay10/Blog-App">Blog</a>
+          <br><br>
+          I build it using React,
+          Let's make awesome blogs and share among friends.
+        </p>
+      </div>
+    </div>
     <!-- /row -->
   </div>
   <!-- /container -->
