--- a/work.html
+++ b/work.html
@@ -71,7 +71,7 @@
      <br></br>
     <div class="row mt-2 ">
       <div class="col-lg-6">
-        <a href="https://github.com/Pawanupadhyay10/Instagram-clone"><img class="img-responsive" src="img/insta.jpg" alt="" /></a>
+        <a href="https://bit.ly/3kw0o8R"><img class="img-responsive" src="img/insta.jpg" alt="" /></a>
       </div>
       <div class="col-lg-6 ">
         <h1>Instagram-clone</h1>
