--- a/about.html
+++ b/about.html
@@ -88,11 +88,123 @@
   <div class="container centered m-2">
     <div class="row">
       <h1>Experience</h1>
+      <ul style="background-color:  #f1eded;">
+        <div>
+          <li>
+            <h3>
+              <b>Project Administrator</b>
+            </h3>
+          </li>
+        </div>
+        <a href="https://www.learnforcause.com/">Learn For Cause</a>
+        <div>
+          <li>
+            <h4>
+              Contributing in Open Source projects;- Xblogger , ACAResource , MentorMe in team at Learn
+              for Cause to bring a change
+              in efficiency and performance of brands in a meaningful manner.
+            </h4>
+          </li>
+          <li>
+            <h4>
+              Weekly Team Contribution: Minimum 4 PR ,Chain of Command: Besides the supervisor, I am directly reporting to the
+              Project
+              Manager.
+            </h4>
+          </li>
+        </div>
+        <h5>duration (Oct. 2021 – Present), Location : Remote.</h5>
+        <br></br>
+      </ul>
+    </div>
+  </div>
+  <br></br>
+  <div class="container centered m-2">
+    <div class="row">
+      <ul style="background-color:  #f1eded;">
+        <div>
+          <li>
+            <h3>
+              <b>Internship (Virtual)</b>
+            </h3>
+          </li>
+        </div>
+        <a href="https://futurereadytalent.in/">Microsoft</a>
+        <div>
+          <li>
+            <h4>
+              Software Engineer intern(Virtual) Remote•Solving business challenges and creating innovative solutions using Microsoft
+              Azure & GitHub tools with 190 hours of
+              learning.
+            </h4>
+          </li>
+        </div>
+        <h5>duration (Oct. 2021 – Present), Location : Remote.</h5>
+        <br></br>
+      </ul>
+    </div>
+  </div>
+  <br></br>
+  <div class="container centered m-2">
+    <div class="row">
+      <ul style="background-color:  #f1eded;">
+        <div>
+          <li>
+            <h3>
+              <b>Open-Source Contributor</b>
+            </h3>
+          </li>
+        </div>
+        <a href="https://gwoc.girlscript.tech/">Girlscript winter of contributing GWOC’21</a>
+        <div>
+          <li>
+            <h4>
+              •I’m recently contributing with my skills in C++, data-structure, and frontend(React.js) knowledge to make the world’s
+              largest multilingual repository via documentation and code snippets
+            </h4>
+          </li>
+        </div>
+        <h5>duration (Sep. 2021 – Nov 2021), Location : Remote.</h5>
+        <br></br>
+      </ul>
+    </div>
+  </div>
+  <br></br>
+  <div class="container centered m-2">
+    <div class="row">
+      <ul style="background-color:  #f1eded;">
+        <div>
+          <li>
+            <h3>
+              <b>Open-Source Contributor</b>
+            </h3>
+          </li>
+        </div>
+        <a href="https://www.colouredcow.com/">Google Summer of Code’21</a>
+        <div>
+          <li>
+            <h4> 
+            Successfully solved the Rendering bug in UI query plan builder bug issue of organization
+            polypheny in GSOC’21 PR:
+            </h4>
+          </li>
+        </div>
+        <div>
+          <li><a href="https://rb.gy/bnhrA2">Rendering bug in UI query plan builder bug issue</a></li>
+        </div>
+        <h5>duration (April 2021 – April 2021), Location : Remote.</h5>
+        <br></br>
+      </ul>
+    </div>
+  </div>
+  <br></br>
+  <div class="container centered m-2">
+    <div class="row">
      <ul style="background-color:  #f1eded;" >
       <div><li><h3>
         <b>Software Developer Intern</b>
       </h3></li></div>
-      <a href="https://www.colouredcow.com/">Internship</a> 
+      <a href="https://www.colouredcow.com/">Internship (ColouredCow )</a> 
       <div><li><h4>I gained exposure to working with teams in an organizational environment and polished   his skills in Laravel. I am ready to be launched into the pool of talented graduates.</h4>
       </li></div>
       <div><li><a href="img/document.pdf">Completion Certificate of Internship</a></li></div>
@@ -108,7 +220,7 @@
         <h3>
           <li><b>Online Doubt expert (Educator)</b></li>
         </h3>
-        <a href="https://www.Vedantu.com/">Internship</a>
+        <a href="https://www.Vedantu.com/">Internship (Vedantu)</a>
         <li><h3>Learning and teaching 📙 is my passion along with interacting to new pepoles.</h3></li>
           <h5>Employment Duration 5 mos(Jan 2019 – May 2019)
           Location Haridwar Area, India</h5>
